[gd_scene load_steps=7 format=3 uid="uid://dnuc3uqmd1srt"]

[ext_resource type="Script" path="res://UI/Shop_UI/ability_description_popup.gd" id="1_unbn5"]
[ext_resource type="AudioStream" uid="uid://bkrc8ykl5xc6f" path="res://Assets/Audio/SFX/cash-register-purchase-87313.mp3" id="2_i37le"]
[ext_resource type="AudioStream" uid="uid://dqxh5sj1vsi84" path="res://Assets/Audio/SFX/wrong-47985.mp3" id="3_opwsf"]

[sub_resource type="LabelSettings" id="LabelSettings_omqvk"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_xbrds"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_e3ylp"]
font_size = 22

[node name="Popup" type="ColorRect"]
offset_right = 280.0
offset_bottom = 176.0
mouse_filter = 1
color = Color(0.168627, 0.168627, 0.168627, 0.898039)
script = ExtResource("1_unbn5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
offset_left = 6.0
offset_top = 2.0
offset_right = 544.0
offset_bottom = 284.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
theme_override_constants/separation = 10

[node name="Name" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Name"
label_settings = SubResource("LabelSettings_omqvk")

[node name="Price" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Cost: "
label_settings = SubResource("LabelSettings_xbrds")

[node name="Description" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
text = "This is an ability. It does stuff. The stuff is cool. It may have a special effect to make it do cooler stuff. words words words words words words words words words words words words words words words words words "
label_settings = SubResource("LabelSettings_e3ylp")
autowrap_mode = 2

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -137.5
offset_top = -31.0
offset_right = 137.5
grow_horizontal = 2
grow_vertical = 0
text = "Buy"

[node name="BuySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_i37le")

[node name="BuyError" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_opwsf")

[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
